projects/primus-tt/portal-react/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: primustt-portal-react
  name: primustt-portal-react-svc
  namespace: primus-tt-dev
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: primustt-portal-react
